# save_sentry

./: .eslintrc.cjs  .gitignore  .prettierignore  README.md  generateBindings.sh  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yml
.husky/: pre-commit
src/: index.less  main.tsx  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/config/migrator/: mod.rs  v1.rs  v2.rs
src-tauri/src/file_handler/: mod.rs
src-tauri/src/file_listener/: mod.rs
src-tauri/src/tauriTypes/: GameConfig.ts  ProgramConfig.ts  SaveFileMetadata.ts
src/App/: index.tsx
src/App/Footer/: index.tsx
src/App/GameView/: index.tsx
src/api/: index.ts
src/components/: AddNewGameButton.tsx  Button.tsx  GameOverview.tsx  GameOverviewContainer.tsx  Input.tsx  MenuIcon.tsx  MuiLink.tsx
src/components/AddGameModal/: index.tsx
src/components/Sidebar/: index.tsx
src/hooks/: useSendTauriEvent.ts  useTauriListen.ts
src/sections/App/: index.tsx
src/sections/App/Footer/: index.tsx
src/sections/App/Game/: index.tsx
src/sections/App/GameDetails/: index.tsx
src/sections/App/GameView/: index.module.less  index.tsx
src/sections/App/GamesOverview/: index.module.less  index.tsx
src/sections/App/Home/: index.tsx
src/store/: configReducer.ts  index.ts  modalReducer.ts  selectors.ts
src/tauriTypes/: GameConfig.ts  SaveFileMetadata.ts
(+6 files in other folders)
