[package]
name = "save_sentry"
version = "0.3.0"
description = "Allow save scumming in games that don't allow multiple save states"
authors = ["Devin Bidwell <dbidwell94@biddydev.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "updater",
    "dialog-all",
    "shell-open",
    "system-tray",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6.1.1" }
directories = "5.0.1"
anyhow = "1.0.81"
debounce = "0.2.2"
lazy_static = "1.4.0"
chrono = "0.4.35"
sha2 = "0.10.8"
base64 = "0.22.0"
uuid = { version = "1.8.0", features = ["v4"] }
ts-rs = "8.1.0" # Generate typescript bindings

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
